# ghis-timetable

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: segments.toml  solver.toml  subjects.toml  teacher_overrides.toml
data/: constraints.json  structure.json  subjects.json  teachers.json
engine/: costs.py
engine/cli/: main.py
engine/data/: ledger.py  loader.py  registry.py  teachers.py
engine/models/: __init__.py  assignment.py  grade.py  period.py  subject.py  teacher.py  timetable.py
engine/render/: csv_out.py  html_ui.py
engine/scheduler/: __init__.py  fill.py  repair.py  score.py  seed.py
engine/solvers/: cpsat.py
engine/specs/: presubmit_b9_openrev_spec.py  presubmit_b9_straddle_spec.py  presubmit_check_spec.py  presubmit_ec_b9_spec.py  presubmit_golden_spec.py  presubmit_jhs_rules_spec.py
engine/specs/golden/: b9_english_fri_double_bad.csv  strict_ok.csv  (+14 more)
engine/validate/: checks.py  report.py
outputs/: audit.txt  segments.json  timetable.csv  validation.json
outputs/json/: schedule.json
outputs/probes/: friday_bright.json
outputs/runs/: latest  previous
outputs/ui/: index.html
scripts/: accountability.py  build_ui.py  diagnose_infeasible.py  exp_heuristic.py  explain_why.py  presubmit_check.py  presubmit_global.py  probe_fri_bright.py  run_cpsat.py  run_generate.py  run_heuristic.py  segment_detect.py
scripts/templates/: make_report.py  presubmit_report.html
tests/: test_checks.py  test_line_budget.py  test_no_blanks.py  test_policies.py  test_render.py  test_scheduler.py  test_teachers.py
(+84 files in other folders)
